Removed collection parent for simplicity
